# common-for-services

./: Makefile  README.md  pyproject.toml
src/common_for_services/database/: connection.py
src/common_for_services/middleware/: db_transaction.py  logging.py
src/common_for_services/notification/: alerts.py  slack.py  sms_twilio.py  smtp.py  web_hook.py
src/common_for_services/tasks/: celery_worker.py
src/middleware/: authentication.py  db_transaction.py  logging.py
utils/: alerts.py
